--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+  <!-- Header -->
   <header class="hero" data-aos="fade-down">
     <div class="container">
       <h1>Hi, I'm <span>Pratyush Kumar Sahu</span></h1>
@@ -22,38 +23,73 @@
     </div>
   </header>
 
+  <!-- About Section -->
   <section id="about" class="section" data-aos="fade-up">
     <div class="container">
+      <img src="images/profile.jpg" alt="Pratyush Kumar Sahu" class="profile-pic" />
       <h2>About Me</h2>
-      <p>I'm a beginner web developer learning to build real-world applications. This portfolio showcases my journey, from learning HTML/CSS to building responsive websites and more.</p>
+      <p>I’m Pratyush Kumar Sahu, a passionate frontend developer currently exploring real-world projects. I enjoy learning technologies like React, Flask, and machine learning, and I'm building cool things as I go!</p>
     </div>
   </section>
 
+  <!-- Projects Section -->
   <section id="projects" class="section" data-aos="fade-right">
     <div class="container">
       <h2>Projects</h2>
+
       <div class="project" data-aos="zoom-in">
+        <img src="images/portfolio.png" alt="Portfolio Website" />
         <h3>Portfolio Website</h3>
-        <p>This website! Built using HTML and CSS to document and showcase my learning as a frontend developer.</p>
+        <p>This website! Built using HTML and CSS, hosted on GitHub Pages to document my frontend journey.</p>
+        <a href="https://pratyush0082.github.io/portfolio-website/" target="_blank">🔗 Live Demo</a> |
+        <a href="https://github.com/Pratyush0082/portfolio-website" target="_blank">💻 GitHub Repo</a>
       </div>
-      <!-- You can add more projects here -->
+
+      <div class="project" data-aos="zoom-in">
+        <img src="images/weather-dashboard.png" alt="Weather Dashboard" />
+        <h3>Weather Dashboard</h3>
+        <p>Weather app using OpenWeatherMap API. Displays current weather, 5-day forecast, and dynamic UI changes.</p>
+        <a href="#" target="_blank">🔗 Live Demo</a> |
+        <a href="#" target="_blank">💻 GitHub Repo</a>
+      </div>
+
+      <div class="project" data-aos="zoom-in">
+        <img src="images/music-recommendation.png" alt="Music Recommendation System" />
+        <h3>Music Recommendation System</h3>
+        <p>Built with Flask and Python. Suggests songs based on user mood and preferences using ML algorithms.</p>
+        <a href="#" target="_blank">🔗 Live Demo</a> |
+        <a href="#" target="_blank">💻 GitHub Repo</a>
+      </div>
+
+      <div class="project" data-aos="zoom-in">
+        <img src="images/stock-predictor.png" alt="Stock Trend Prediction" />
+        <h3>Chaotic Whispers: Stock Trend Prediction</h3>
+        <p>Uses LSTM and Transformer-based deep learning models to analyze market sentiment and forecast stock prices.</p>
+        <a href="#" target="_blank">🔗 Live Demo</a> |
+        <a href="#" target="_blank">💻 GitHub Repo</a>
+      </div>
     </div>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" class="section" data-aos="fade-left">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Email: pratyush@example.com</p>
+      <p>Email: <a href="mailto:pratyushkumarsahu47@gmail.com">pratyushkumarsahu47@gmail.com</a></p>
+      <p>Phone: 7978893102</p>
       <p>GitHub: <a href="https://github.com/Pratyush0082" target="_blank">Pratyush0082</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/pratyush-kumar-sahu-157613259/" target="_blank">My LinkedIn Profile</a></p>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <div class="container">
       <p>© 2025 Pratyush Kumar Sahu</p>
     </div>
   </footer>
 
+  <!-- AOS Animation Script -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
